syntax = "proto3";

package fetch.oef.pb;

import "protos/src/protos/query.proto";
import "protos/src/protos/dap_interface.proto";

message SearchQuery {

    message DirectedSearch {
        message PlaneDistance {
            float geo = 1;
            float topic = 2;
        }

        message PlaneTarget {
            fetch.oef.pb.Query.Location geo = 1;
            repeated float topic = 2;
        }
        PlaneDistance distance = 1;
        PlaneTarget target = 2;
    }

    bytes source_key = 1;
    fetch.oef.pb.Query.Model model = 2;
    uint32 ttl = 3;
    DirectedSearch directed_search = 4;
    ConstructQueryObjectRequest query_v2 = 5;
}
